--- a/search.html
+++ b/search.html
@@ -4,40 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe Finder</title>
-  <style>
-    body {
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    #search-container {
-      margin: 20px;
-    }
-    #recipe-results {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .recipe-card {
-      width: 200px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      text-align: left;
-    }
-    .recipe-card img {
-      width: 100%;
-      height: auto;
-    }
-    .recipe-card h3 {
-      font-size: 16px;
-      margin: 10px;
-    }
-  </style>
+  <!-- Link to external CSS file -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Recipe Finder</h1>
@@ -45,49 +13,49 @@
     <input type="text" id="search-input" placeholder="Enter food name" />
     <button id="search-button">Search</button>
   </div>
+
+<!-- Custom Dropdown for Diet -->
+<div id="custom-diet-dropdown" class="custom-dropdown">
+    <button class="dropdown-btn">Select Diet</button>
+    <ul class="dropdown-menu">
+      <li data-value="clear">Clear Selection</li> <!-- Clear Option -->
+      <li data-value="gluten free">Gluten Free</li>
+      <li data-value="ketogenic">Ketogenic</li>
+      <li data-value="vegetarian">Vegetarian</li>
+      <li data-value="lacto-vegetarian">Lacto-Vegetarian</li>
+      <li data-value="ovo-vegetarian">Ovo-Vegetarian</li>
+      <li data-value="vegan">Vegan</li>
+      <li data-value="pescetarian">Pescetarian</li>
+      <li data-value="paleo">Paleo</li>
+      <li data-value="primal">Primal</li>
+      <li data-value="low fodmap">Low FODMAP</li>
+      <li data-value="whole30">Whole30</li>
+    </ul>
+  </div>
+  
+  <!-- Custom Dropdown for Intolerances -->
+  <div id="custom-intolerance-dropdown" class="custom-dropdown">
+    <button class="dropdown-btn">Select Intolerance</button>
+    <ul class="dropdown-menu">
+      <li data-value="clear">Clear Selection</li> <!-- Clear Option -->
+      <li data-value="dairy">Dairy</li>
+      <li data-value="egg">Egg</li>
+      <li data-value="gluten">Gluten</li>
+      <li data-value="grain">Grain</li>
+      <li data-value="peanut">Peanut</li>
+      <li data-value="seafood">Seafood</li>
+      <li data-value="sesame">Sesame</li>
+      <li data-value="shellfish">Shellfish</li>
+      <li data-value="soy">Soy</li>
+      <li data-value="sulfite">Sulfite</li>
+      <li data-value="tree nut">Tree Nut</li>
+      <li data-value="wheat">Wheat</li>
+    </ul>
+  </div>
+  
+
   <div id="recipe-results"></div>
 
-  <script>
-    const apiKey = '4e02f87a66ed42628364000b25970784';
-    const searchButton = document.getElementById('search-button');
-    const searchInput = document.getElementById('search-input');
-    const recipeResults = document.getElementById('recipe-results');
-
-    async function searchRecipes(query) {
-      try {
-        const response = await fetch(`https://api.spoonacular.com/recipes/complexSearch?query=${query}&number=10&apiKey=${apiKey}`);
-        const data = await response.json();
-
-        // Clear previous results
-        recipeResults.innerHTML = '';
-
-        // Display results
-        if (data.results && data.results.length > 0) {
-          data.results.forEach(recipe => {
-            const recipeCard = document.createElement('div');
-            recipeCard.className = 'recipe-card';
-            recipeCard.innerHTML = `
-              <img src="${recipe.image}" alt="${recipe.title}" />
-              <h3>${recipe.title}</h3>
-            `;
-            recipeResults.appendChild(recipeCard);
-          });
-        } else {
-          recipeResults.innerHTML = '<p>No recipes found. Try another search!</p>';
-        }
-      } catch (error) {
-        console.error('Error fetching recipes:', error);
-        recipeResults.innerHTML = '<p>Error fetching recipes. Please try again later.</p>';
-      }
-    }
-
-    // Event listener for the search button
-    searchButton.addEventListener('click', () => {
-      const query = searchInput.value.trim();
-      if (query) {
-        searchRecipes(query);
-      }
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
