--- a/search.html
+++ b/search.html
@@ -4,57 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe Finder</title>
-  <!-- Link to external CSS file -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Recipe Finder</h1>
-  <div id="search-container">
-    <input type="text" id="search-input" placeholder="Enter food name" />
-    <button id="search-button">Search</button>
+  <!-- Header Container -->
+  <div id="header-container">
+    <h1>Recipe Finder</h1>
+    <div id="search-container">
+      <input type="text" id="search-input" placeholder="Enter food name" />
+      <button id="search-button">Search</button>
+    </div>
+
+    <div id="custom-diet-dropdown" class="custom-dropdown">
+      <button class="dropdown-btn">Select Diet</button>
+      <ul class="dropdown-menu">
+        <li data-value="clear">Clear Selection</li>
+        <li data-value="gluten free">Gluten Free</li>
+        <li data-value="ketogenic">Ketogenic</li>
+        <li data-value="vegetarian">Vegetarian</li>
+        <li data-value="lacto-vegetarian">Lacto-Vegetarian</li>
+        <li data-value="ovo-vegetarian">Ovo-Vegetarian</li>
+        <li data-value="vegan">Vegan</li>
+        <li data-value="pescetarian">Pescetarian</li>
+        <li data-value="paleo">Paleo</li>
+        <li data-value="primal">Primal</li>
+        <li data-value="low fodmap">Low FODMAP</li>
+        <li data-value="whole30">Whole30</li>
+      </ul>
+    </div>
+    <div id="custom-intolerance-dropdown" class="custom-dropdown">
+      <button class="dropdown-btn">Select Intolerance</button>
+      <ul class="dropdown-menu">
+        <li data-value="clear">Clear Selection</li>
+        <li data-value="dairy">Dairy</li>
+        <li data-value="egg">Egg</li>
+        <li data-value="gluten">Gluten</li>
+        <li data-value="grain">Grain</li>
+        <li data-value="peanut">Peanut</li>
+        <li data-value="seafood">Seafood</li>
+        <li data-value="sesame">Sesame</li>
+        <li data-value="shellfish">Shellfish</li>
+        <li data-value="soy">Soy</li>
+        <li data-value="sulfite">Sulfite</li>
+        <li data-value="tree nut">Tree Nut</li>
+        <li data-value="wheat">Wheat</li>
+      </ul>
+    </div>
   </div>
 
-<!-- Custom Dropdown for Diet -->
-<div id="custom-diet-dropdown" class="custom-dropdown">
-    <button class="dropdown-btn">Select Diet</button>
-    <ul class="dropdown-menu">
-      <li data-value="clear">Clear Selection</li> <!-- Clear Option -->
-      <li data-value="gluten free">Gluten Free</li>
-      <li data-value="ketogenic">Ketogenic</li>
-      <li data-value="vegetarian">Vegetarian</li>
-      <li data-value="lacto-vegetarian">Lacto-Vegetarian</li>
-      <li data-value="ovo-vegetarian">Ovo-Vegetarian</li>
-      <li data-value="vegan">Vegan</li>
-      <li data-value="pescetarian">Pescetarian</li>
-      <li data-value="paleo">Paleo</li>
-      <li data-value="primal">Primal</li>
-      <li data-value="low fodmap">Low FODMAP</li>
-      <li data-value="whole30">Whole30</li>
-    </ul>
-  </div>
-  
-  <!-- Custom Dropdown for Intolerances -->
-  <div id="custom-intolerance-dropdown" class="custom-dropdown">
-    <button class="dropdown-btn">Select Intolerance</button>
-    <ul class="dropdown-menu">
-      <li data-value="clear">Clear Selection</li> <!-- Clear Option -->
-      <li data-value="dairy">Dairy</li>
-      <li data-value="egg">Egg</li>
-      <li data-value="gluten">Gluten</li>
-      <li data-value="grain">Grain</li>
-      <li data-value="peanut">Peanut</li>
-      <li data-value="seafood">Seafood</li>
-      <li data-value="sesame">Sesame</li>
-      <li data-value="shellfish">Shellfish</li>
-      <li data-value="soy">Soy</li>
-      <li data-value="sulfite">Sulfite</li>
-      <li data-value="tree nut">Tree Nut</li>
-      <li data-value="wheat">Wheat</li>
-    </ul>
-  </div>
-  
-
+  <!-- Recipe Results -->
   <div id="recipe-results"></div>
+
+  <!-- Recipe Details -->
+  <div id="recipe-details" style="display: none; text-align: left; padding: 20px;"></div>
 
   <script src="script.js"></script>
 </body>
