--- a/search.html
+++ b/search.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+      <a href="search.html">Search Recipe</a>
+      <a href="test_favorites.php">Favorite Recipes</a>
+      <a href="create_recipe.html">My Recipes</a>
+    </nav>
   <!-- Header Container -->
   <div id="header-container">
     <h1>Recipe Finder</h1>
@@ -14,6 +19,10 @@
       <input type="text" id="search-input" placeholder="Enter food name" />
       <button id="search-button">Search</button>
     </div>
+
+    <!-- <div id="Favorite Recipe!" class="custom-dropdown">
+      <button onclick="window.location.href='favorites.php';" class="dropdown-btn">Favorite Recipe!</button>
+    </div> -->
 
     <div id="custom-diet-dropdown" class="custom-dropdown">
       <button class="dropdown-btn">Select Diet</button>
@@ -25,7 +34,7 @@
         <li data-value="lacto-vegetarian">Lacto-Vegetarian</li>
         <li data-value="ovo-vegetarian">Ovo-Vegetarian</li>
         <li data-value="vegan">Vegan</li>
-        <li data-value="pescetarian">Pescetarian</li>
+        <li data-value="pescetarian">Pescetarian</li>s
         <li data-value="paleo">Paleo</li>
         <li data-value="primal">Primal</li>
         <li data-value="low fodmap">Low FODMAP</li>
